fix: removed dark mode colour

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,12 +50,12 @@
   --font-jetBrains-mono: var(--font-jetBrains-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
